<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/blue" android:orientation="vertical" >
<ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content">
     
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/blue" android:orientation="vertical" >
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="420dp" android:background="@drawable/blue" android:orientation="vertical" >
              
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" >
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:textColor="@android:color/black" android:gravity="center" android:textSize="15dp" android:padding="10dp" android:text="@string/titulo" />
    </LinearLayout>
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/green" android:orientation="horizontal" >
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/green" android:orientation="vertical" >
		    <ImageView android:id="@+id/ImageView01" android:layout_width="100dp" android:layout_height="120dp" android:background="@drawable/iconoface1" android:scaleType="center" />
    	</LinearLayout>	
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/green" android:orientation="vertical" >
		    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:textColor="@android:color/black" android:textSize="12dp" android:padding="10dp" android:gravity="center" android:text="@string/Nombre" />
		    <TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:textColor="@android:color/black" android:textSize="12dp" android:padding="dp" android:text="@string/DescEstado" />
    	</LinearLayout>		 	            
    </LinearLayout>   
       
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <LinearLayout android:id="@+id/linear1" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:padding="10dp" android:background="@drawable/cyan" android:orientation="vertical" >
                    <Button android:id="@+id/button1" android:layout_marginTop="10dip" android:text="@string/verPerfil" android:layout_width="100dp" android:layout_height="wrap_content"/>
                    <Button android:id="@+id/button2" android:layout_marginTop="10dip" android:text="@string/cargarInfo" android:layout_width="100dp" android:layout_height="wrap_content" />
                    <Button android:id="@+id/button3" android:layout_marginTop="10dip" android:text="@string/actualizar" android:layout_width="100dp" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:id="@+id/linear2" android:layout_toRightOf="@+id/linear1" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="230dp" android:background="@drawable/darkGreen" android:gravity="center" android:orientation="vertical" >
           		    <ImageView android:id="@+id/ImageView01" android:layout_width="162dp" android:layout_height="118dp" android:background="@drawable/iconomapa1" android:scaleType="center"/>
                    <Button android:id="@+id/button4" android:text="@string/localizame" android:layout_width="100dp"  android:layout_height="wrap_content" android:layout_marginTop="20dip"/>
                </LinearLayout>                
    </RelativeLayout>         
 </LinearLayout>
 
  <TextView android:id="@+id/miMarquesina" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/darkGreen" android:layout_alignParentRight="true" android:lines="1" android:ellipsize="marquee" android:fadingEdge="horizontal" android:marqueeRepeatLimit="marquee_forever" android:scrollHorizontally="true" android:padding="2dp" android:textStyle="bold" android:singleLine="true" android:textColor="@drawable/red" android:text="@string/marquesina" />
</LinearLayout>

</ScrollView>
</LinearLayout>
